# llm-router

./: Cargo.toml  QWEN.md  README.md  config.toml
crates/llm-router-bin/: Cargo.toml
crates/llm-router-bin/src/: main.rs
crates/llm-router-lib/: Cargo.toml
crates/llm-router-lib/src/: lib.rs  middleware.rs  serve.rs
crates/llm-router-lib/src/protocol/: mod.rs
src/: config.rs  health.rs  main.rs  serve.rs
src/protocol/: anthropic.rs  mod.rs  openai.rs
