[package]
name = "llm-router"
version = "0.0.0"
edition = "2024"

[dependencies]
log = "0.4"
flexi_logger = "0.31"
colored = "3.1"

clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

tokio = { version = "1.50", features = ["rt-multi-thread", "net"] }

hyper = { version = "1.8", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = [
    "http1",
    "tokio",
    "server",
    "client-legacy",
] }
http-body-util = "0.1"
bytes = "1.0"
tokio-stream = "0.1"
