[package]
name = "llm-router-lib"
version = "0.0.0"
edition = "2024"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

tokio = { version = "1.50", features = ["rt-multi-thread", "net"] }

hyper = { version = "1.8", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = [
    "http1",
    "tokio",
    "server",
    "client-legacy",
] }
hyper-rustls = { version = "0.27", features = ["http1", "rustls-native-certs"] }
http-body-util = "0.1"
bytes = "1.0"
